
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint ;


 int CFLAG_CLEAR ;
 int DX ;
 int FLAG_C ;
 int FLAG_N ;
 int FLAG_V ;
 int FLAG_Z ;
 int MASK_OUT_BELOW_16 (int) ;
 int NFLAG_16 (int) ;
 int OPER_AY_AI_16 () ;
 int VFLAG_CLEAR ;

void m68k_op_move_16_d_ai(void)
{
 uint res = OPER_AY_AI_16();
 uint* r_dst = &DX;

 *r_dst = MASK_OUT_BELOW_16(*r_dst) | res;

 FLAG_N = NFLAG_16(res);
 FLAG_Z = res;
 FLAG_V = VFLAG_CLEAR;
 FLAG_C = CFLAG_CLEAR;
}
